AC_INIT([Utils], [0.0], [utils@fortybelow.ca])
AC_CONFIG_FILES([
	index.html
	Download/index.html
	Docs/index.html
	Docs/raise.html
	Docs/types.html
	Docs/helpers.html
	Docs/is.html
	Docs/can.html
	Docs/node.html
	Docs/create.html
	Docs/classes.html
	Docs/traverse.html
	Docs/select.html
	Docs/glossary.html
	Tests/index.html
	about.html
])
AC_SUBST_FILE(BEGIN)
BEGIN="Templates/begin";

AC_SUBST_FILE(HEAD)
HEAD="Templates/head";

AC_SUBST_FILE(ROOT_STYLESHEET)
ROOT_STYLESHEET="Templates/stylesheet";

AC_SUBST_FILE(DOWNLOAD_STYLESHEET)
DOWNLOAD_STYLESHEET="Templates/Download/stylesheet";

AC_SUBST_FILE(DOCS_STYLESHEET)
DOCS_STYLESHEET="Templates/Docs/stylesheet";

AC_SUBST_FILE(TESTS_STYLESHEET)
TESTS_STYLESHEET="Templates/Tests/stylesheet";

AC_SUBST_FILE(ROOT_RESOURCES)
ROOT_RESOURCES="Templates/resources";

AC_SUBST_FILE(DOWNLOAD_RESOURCES)
DOWNLOAD_RESOURCES="Templates/Download/resources";

AC_SUBST_FILE(DOCS_RESOURCES)
DOCS_RESOURCES="Templates/Docs/resources";

AC_SUBST_FILE(TESTS_RESOURCES)
TESTS_RESOURCES="Templates/Tests/resources";

AC_SUBST_FILE(BODY)
BODY="Templates/body";

AC_SUBST_FILE(ROOT_HEADER)
ROOT_HEADER="Templates/header";

AC_SUBST_FILE(DOWNLOAD_HEADER)
DOWNLOAD_HEADER="Templates/Download/header";

AC_SUBST_FILE(DOCS_HEADER)
DOCS_HEADER="Templates/Docs/header";

AC_SUBST_FILE(TESTS_HEADER)
TESTS_HEADER="Templates/Tests/header";

AC_SUBST_FILE(DOWNLOAD_NAV)
DOWNLOAD_NAV="Templates/Download/nav";

AC_SUBST_FILE(DOCS_NAV)
DOCS_NAV="Templates/Docs/nav";

AC_SUBST_FILE(TESTS_NAV)
TESTS_NAV="Templates/Tests/nav";

AC_SUBST_FILE(DOCS_HOST_DETECTION_WARNING)
DOCS_HOST_DETECTION_WARNING="Templates/Docs/Warnings/host_detection";

AC_SUBST_FILE(DOCS_DESCRIPTION)
DOCS_DESCRIPTION="Templates/Docs/description";

AC_SUBST_FILE(DOCS_RETURN_VALUE)
DOCS_RETURN_VALUE="Templates/Docs/return";

AC_SUBST_FILE(FOOTER)
FOOTER="Templates/footer";

AC_SUBST_FILE(END)
END="Templates/end";

AC_OUTPUT
