AC_INIT([Utils], [0.0], [utils@fortybelow.ca])
AC_CONFIG_FILES([
	"Templates/license"
	"Library/license.js"
	"Library/utils.js"
	"Library/metadata.js"
	"Library/raise.js"
	"Library/types.js"
	"Library/is.js"
	"Library/helpers.js"
	"Library/node.js"
	"Library/create.js"
	"Library/classes.js"
	"Library/traverse.js"
	"Library/select.js"
	"index.html"
	"Download/index.html"
	"Docs/index.html"
	"Docs/raise.html"
	"Docs/types.html"
	"Docs/helpers.html"
	"Docs/is.html"
	"Docs/node.html"
	"Docs/create.html"
	"Docs/classes.html"
	"Docs/traverse.html"
	"Docs/select.html"
	"Docs/glossary.html"
	"Docs/HOWTO/index.html"
	"Docs/HOWTO/degradation.html"
	"Docs/HOWTO/implementation.html"
	"Docs/HOWTO/customisation.html"
	"Tests/index.html"
	"Tests/Node/node.html"
	"Tests/Node/JS/node.js"
	"Tests/Create/create.html"
	"Tests/Create/JS/create.js"
	"Tests/Classes/classes.html"
	"Tests/Classes/JS/classes.js"
	"Tests/HOWTO/JS/slideshow.js"
	"Tests/Traverse/traverse.html"
	"Tests/Traverse/JS/traverse.js"
	"Tests/Select/select.html"
	"Tests/Select/JS/select.js"
	"Tests/Complete/complete.html"
	"Tests/Complete/JS/complete.js"
	"Tests/Complete/complete-min.html"
	"Tests/Complete/JS/complete-min.js"
	"about.html"
	"README.md"
])

# your library name here

AC_SUBST(LIBRARY_NAME)
LIBRARY_NAME="Utils";

# templates

AC_SUBST_FILE(LICENSE)
LICENSE="Templates/license";

AC_SUBST_FILE(BEGIN)
BEGIN="Templates/begin";

AC_SUBST_FILE(HEAD)
HEAD="Templates/head";

AC_SUBST_FILE(ROOT_STYLESHEET)
ROOT_STYLESHEET="Templates/stylesheet";

AC_SUBST_FILE(DOWNLOAD_STYLESHEET)
DOWNLOAD_STYLESHEET="Templates/Download/stylesheet";

AC_SUBST_FILE(DOCS_STYLESHEET)
DOCS_STYLESHEET="Templates/Docs/stylesheet";

AC_SUBST_FILE(HOWTO_STYLESHEET)
HOWTO_STYLESHEET="Templates/Docs/HowTo/stylesheet";

AC_SUBST_FILE(TESTS_STYLESHEET)
TESTS_STYLESHEET="Templates/Tests/stylesheet";

AC_SUBST_FILE(ROOT_RESOURCES)
ROOT_RESOURCES="Templates/resources";

AC_SUBST_FILE(DOWNLOAD_RESOURCES)
DOWNLOAD_RESOURCES="Templates/Download/resources";

AC_SUBST_FILE(DOCS_RESOURCES)
DOCS_RESOURCES="Templates/Docs/resources";

AC_SUBST_FILE(HOWTO_RESOURCES)
HOWTO_RESOURCES="Templates/Docs/HowTo/resources";

AC_SUBST_FILE(TESTS_RESOURCES)
TESTS_RESOURCES="Templates/Tests/resources";

AC_SUBST_FILE(BODY)
BODY="Templates/body";

AC_SUBST_FILE(ROOT_HEADER)
ROOT_HEADER="Templates/header";

AC_SUBST_FILE(DOWNLOAD_HEADER)
DOWNLOAD_HEADER="Templates/Download/header";

AC_SUBST_FILE(DOCS_HEADER)
DOCS_HEADER="Templates/Docs/header";

AC_SUBST_FILE(HOWTO_HEADER)
HOWTO_HEADER="Templates/Docs/HowTo/header";

AC_SUBST_FILE(TESTS_HEADER)
TESTS_HEADER="Templates/Tests/header";

AC_SUBST_FILE(DOWNLOAD_NAV)
DOWNLOAD_NAV="Templates/Download/nav";

AC_SUBST_FILE(DOCS_NAV)
DOCS_NAV="Templates/Docs/nav";

AC_SUBST_FILE(HOWTO_NAV)
HOWTO_NAV="Templates/Docs/HowTo/nav";

AC_SUBST_FILE(TESTS_NAV)
TESTS_NAV="Templates/Tests/nav";

AC_SUBST_FILE(DOCS_FILTER_INSTRUCTIONS)
DOCS_FILTER_INSTRUCTIONS="Templates/Docs/Instructions/filter";

AC_SUBST_FILE(DOCS_HOST_DETECTION_WARNING)
DOCS_HOST_DETECTION_WARNING="Templates/Docs/Warnings/host_detection";

AC_SUBST_FILE(DOCS_DESCRIPTION)
DOCS_DESCRIPTION="Templates/Docs/description";

AC_SUBST_FILE(DOCS_RETURN_VALUE)
DOCS_RETURN_VALUE="Templates/Docs/return";

AC_SUBST_FILE(FOOTER)
FOOTER="Templates/footer";

AC_SUBST_FILE(END)
END="Templates/end";

AC_OUTPUT
